# sloth_test

./: README.md  agents.md  pyproject.toml  requirements.md
docs/: design_doc.md  tech_implementation.md  tests.md
src/gemma_agent/: __init__.py  cli.py  pipeline.py
tests/: test_pipeline.py
